--- a/index.html
+++ b/index.html
@@ -3,125 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOVEREIGN SYMPTOMS // GODHOOD ENCODED</title>
+    <title>SOVEREIGN SYMPTOMS // LAVISH SYSTEMS</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;900&family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;900&family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
     <style>
-        :root { --obsidian: #050505; --gold: #c5a059; --platinum: #e5e5e5; }
-        body { background-color: var(--obsidian); color: var(--platinum); font-family: 'Montserrat', sans-serif; letter-spacing: 0.15em; line-height: 1.6; }
-        .font-luxury { font-family: 'Cinzel', serif; }
-        .border-gold { border: 1px solid rgba(197, 160, 89, 0.2); }
-        .bg-obsidian-glass { background: rgba(5, 5, 5, 0.9); backdrop-filter: blur(20px); border: 1px solid rgba(197, 160, 89, 0.1); }
-        .text-gold { color: var(--gold); }
-        .transition-god { transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1); }
-        .transition-god:hover { border-color: var(--gold); box-shadow: 0 0 40px rgba(197, 160, 89, 0.15); }
+        :root { --obsidian: #020202; --gold: #d4af37; --platinum: #f4f4f4; }
+        body { background-color: var(--obsidian); color: var(--platinum); font-family: 'Montserrat', sans-serif; letter-spacing: 0.2em; }
+        .font-godhood { font-family: 'Cinzel Decorative', serif; }
+        .glass-panel { background: rgba(255, 255, 255, 0.02); backdrop-filter: blur(40px); border: 1px solid rgba(212, 175, 55, 0.15); }
+        .text-gold { color: var(--gold); text-shadow: 0 0 10px rgba(212, 175, 55, 0.3); }
+        .gold-border-glow:hover { border-color: var(--gold); box-shadow: 0 0 50px rgba(212, 175, 55, 0.1); transform: scale(1.02); }
+        .btn-luxury { border: 1px solid var(--gold); padding: 1.5rem 3rem; font-size: 10px; transition: 0.5s ease; cursor: pointer; }
+        .btn-luxury:hover { background: var(--gold); color: black; box-shadow: 0 0 30px var(--gold); }
+        iframe { filter: contrast(1.1) brightness(0.9); transition: 0.8s ease; }
+        iframe:hover { filter: contrast(1.2) brightness(1.1); }
     </style>
 </head>
-<body class="p-6 md:p-16 lg:p-24">
+<body class="p-4 md:p-24 overflow-x-hidden">
 
-    <header class="max-w-7xl mx-auto mb-40 text-center">
-        <h1 class="font-luxury text-5xl md:text-8xl font-black mb-6 tracking-tighter uppercase text-white">Let There Be Me</h1>
-        <p class="text-gold tracking-[1em] uppercase text-[10px] mb-12">The Declaration of Sovereignty</p>
-        <div class="max-w-4xl mx-auto border-gold p-16 bg-obsidian-glass shadow-2xl">
-            <p class="text-[11px] uppercase leading-loose text-white/70 italic max-w-2xl mx-auto">
-                "Sovereign Symptoms is the inevitable diagnostic of the self. Lavish Systems are the opulent output of your godhood encoded."
+    <header class="max-w-7xl mx-auto mb-60 text-center">
+        <h1 class="font-godhood text-5xl md:text-9xl font-black text-white uppercase tracking-tighter mb-4">SOVEREIGN SYMPTOMS</h1>
+        <p class="text-gold tracking-[1.5em] uppercase text-[12px] font-bold mb-20">The Diagnostic of Godhood</p>
+        <div class="max-w-4xl mx-auto glass-panel p-20 gold-border-glow">
+            <p class="text-xs uppercase leading-[2.5] text-white/80 italic">
+                "Luxury is not a request; it is the inevitable symptom of sovereignty. We do not build websites. We architect digital territories for the Godhood encoded."
             </p>
+            <div class="mt-12">
+                <a href="#menu" class="btn-luxury uppercase font-bold tracking-[0.5em]">Diagnose Your System Now</a>
+            </div>
         </div>
     </header>
 
-    <section class="max-w-7xl mx-auto mb-40">
-        <h2 class="font-luxury text-white text-xl uppercase mb-16 tracking-[0.4em] border-b border-gold pb-6">00 // Active Territories</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
-            <div class="border-gold p-8 bg-obsidian-glass transition-god">
-                <h3 class="font-luxury text-gold text-sm uppercase mb-2 tracking-widest">thetrophyhoe.com</h3>
-                <p class="text-[10px] text-white/40 uppercase mb-6 tracking-widest">Identity Hub // Narrative Infrastructure</p>
-                <div class="aspect-video bg-black flex items-center justify-center border border-gold/10 mb-6">
-                    <p class="text-[9px] text-gold animate-pulse tracking-[0.4em] uppercase">Status: 200 OK // Sovereign</p>
+    <section class="max-w-7xl mx-auto mb-60">
+        <h2 class="font-godhood text-white text-3xl uppercase mb-20 border-b border-gold pb-8">00 // Visual Synthesis</h2>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-32 items-center mb-32">
+            <div class="glass-panel p-2 gold-border-glow">
+                <div class="aspect-video bg-black relative overflow-hidden">
+                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/lhIZqPdQOwo?autoplay=1&mute=1&loop=1&playlist=lhIZqPdQOwo" frameborder="0"></iframe>
                 </div>
-                <a href="https://thetrophyhoe.com" target="_blank" class="inline-block border border-gold px-8 py-3 text-[9px] text-gold uppercase tracking-[0.3em] hover:bg-gold hover:text-black">Enter Territory</a>
             </div>
-            <div class="border-gold p-8 bg-obsidian-glass transition-god">
-                <h3 class="font-luxury text-gold text-sm uppercase mb-2 tracking-widest">glitchrecords.com</h3>
-                <p class="text-[10px] text-white/40 uppercase mb-6 tracking-widest">E-Commerce // Neural Distribution</p>
-                <div class="aspect-video bg-black flex items-center justify-center border border-gold/10 mb-6">
-                    <p class="text-[9px] text-gold animate-pulse tracking-[0.4em] uppercase">Status: 200 OK // Active</p>
-                </div>
-                <a href="https://glitchrecords.com" target="_blank" class="inline-block border border-gold px-8 py-3 text-[9px] text-gold uppercase tracking-[0.3em] hover:bg-gold hover:text-black">Enter Territory</a>
+            <div class="space-y-10">
+                <h3 class="font-godhood text-gold text-2xl uppercase">VIGILANTE</h3>
+                <p class="text-[11px] text-white/50 uppercase leading-relaxed">The high-compute baseline of narrative architecture. This is where identity meets the void.</p>
+                <a href="#menu" class="btn-luxury inline-block uppercase font-bold">Declare Sovereignty For This Domain</a>
             </div>
         </div>
-    </section>
 
-    <section class="max-w-7xl mx-auto mb-40">
-        <h2 class="font-luxury text-white text-xl uppercase mb-16 tracking-[0.4em] border-b border-gold pb-6">01 // Visual Synthesis</h2>
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-            <div class="border-gold bg-obsidian-glass overflow-hidden flex flex-col">
-                <div class="aspect-video bg-black relative">
-                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/lhIZqPdQOwo" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="p-8">
-                    <p class="text-gold font-luxury text-[10px] mb-2 uppercase">VIGILANTE</p>
-                    <p class="text-[10px] text-white/40 uppercase">Narrative Architecture // EPK Protocol</p>
-                </div>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-32 items-center">
+            <div class="space-y-10 order-2 lg:order-1 text-right">
+                <h3 class="font-godhood text-gold text-2xl uppercase">CRUCIFLEX</h3>
+                <p class="text-[11px] text-white/50 uppercase leading-relaxed">Rhythm-synced motion assets engineered for visual dominance.</p>
+                <a href="#menu" class="btn-luxury inline-block uppercase font-bold">Architect Your Hallucination</a>
             </div>
-            <div class="border-gold bg-obsidian-glass overflow-hidden flex flex-col">
-                <div class="aspect-video bg-black relative">
-                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/F7PIxg_JhaY" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="p-8">
-                    <p class="text-gold font-luxury text-[10px] mb-2 uppercase">CRUCIFLEX</p>
-                    <p class="text-[10px] text-white/40 uppercase">Visual Synthesis // Cinematic Build</p>
-                </div>
-            </div>
-            <div class="border-gold bg-obsidian-glass overflow-hidden flex flex-col">
-                <div class="aspect-video bg-black relative">
-                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/mnYIsO-iQ-c" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="p-8">
-                    <p class="text-gold font-luxury text-[10px] mb-2 uppercase">PROJECT JANNETTE</p>
-                    <p class="text-[10px] text-white/40 uppercase">Generative Assets // Short-Form Hype</p>
+            <div class="glass-panel p-2 gold-border-glow order-1 lg:order-2">
+                <div class="aspect-video bg-black relative overflow-hidden">
+                    <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/F7PIxg_JhaY?autoplay=0&mute=1&loop=1" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="max-w-7xl mx-auto mb-40">
-        <h2 class="font-luxury text-white text-xl uppercase mb-16 tracking-[0.4em] border-b border-gold pb-6">02 // The Master Service Menu</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-            <div class="border-gold p-8 bg-obsidian-glass">
-                <h3 class="font-luxury text-gold text-[11px] mb-8 uppercase border-b border-gold/10 pb-4">Web Arch</h3>
-                <ul class="text-[9px] space-y-4 uppercase text-white/60">
-                    <li class="flex justify-between"><span>Vanity Terminal</span> <span>$2.5K</span></li>
-                    <li class="flex justify-between"><span>Command Center</span> <span>$8K</span></li>
-                    <li class="flex justify-between text-white font-bold pt-4"><span>GOD MODE</span> <span>$15K+</span></li>
+    <section id="menu" class="max-w-7xl mx-auto mb-60">
+        <h2 class="font-godhood text-white text-3xl uppercase mb-20 border-b border-gold pb-8">01 // The Master Service Menu</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+            
+            <div class="glass-panel p-12 gold-border-glow">
+                <h3 class="font-godhood text-gold text-xs uppercase mb-8 border-b border-gold/20 pb-4">Web Architecture</h3>
+                <ul class="text-[10px] space-y-6 uppercase text-white/70">
+                    <li class="flex justify-between"><span>Vanity Terminal</span> <span class="text-gold">$2.5K</span></li>
+                    <li class="flex justify-between"><span>Command Center</span> <span class="text-gold">$8K</span></li>
+                    <li class="flex justify-between font-bold text-white pt-6 border-t border-gold/10"><span>GOD MODE</span> <span class="text-gold">$15K+</span></li>
                 </ul>
             </div>
-            <div class="border-gold p-8 bg-obsidian-glass">
-                <h3 class="font-luxury text-gold text-[11px] mb-8 uppercase border-b border-gold/10 pb-4">Sonic Weaponry</h3>
-                <ul class="text-[9px] space-y-4 uppercase text-white/60">
-                    <li class="flex justify-between"><span>Composition</span> <span>$2.5K</span></li>
-                    <li class="flex justify-between"><span>Vocal Protocol</span> <span>$800</span></li>
-                    <li class="flex justify-between text-white font-bold pt-4"><span>Ghost protocol</span> <span>$5K+</span></li>
+
+            <div class="glass-panel p-12 gold-border-glow">
+                <h3 class="font-godhood text-gold text-xs uppercase mb-8 border-b border-gold/20 pb-4">Sonic Weaponry</h3>
+                <ul class="text-[10px] space-y-6 uppercase text-white/70">
+                    <li class="flex justify-between"><span>Neural Skeleton</span> <span class="text-gold">$2.5K</span></li>
+                    <li class="flex justify-between"><span>Ghost Protocol</span> <span class="text-gold">$5K+</span></li>
+                    <li class="flex justify-between"><span>Topline</span> <span class="text-gold">$800</span></li>
                 </ul>
             </div>
-            <div class="border-gold p-8 bg-obsidian-glass">
-                <h3 class="font-luxury text-gold text-[11px] mb-8 uppercase border-b border-gold/10 pb-4">Identity</h3>
-                <ul class="text-[9px] space-y-4 uppercase text-white/60">
-                    <li class="flex justify-between"><span>Full Hallucination</span> <span>$1.8K</span></li>
-                    <li class="flex justify-between"><span>The Dossier</span> <span>$900</span></li>
-                    <li class="flex justify-between text-white font-bold pt-4"><span>Show Bible</span> <span>$2.5K</span></li>
+
+            <div class="glass-panel p-12 gold-border-glow">
+                <h3 class="font-godhood text-gold text-xs uppercase mb-8 border-b border-gold/20 pb-4">Neural Upgrades</h3>
+                <ul class="text-[10px] space-y-6 uppercase text-white/70">
+                    <li class="flex justify-between"><span>Agent Design</span> <span class="text-gold">$1K</span></li>
+                    <li class="flex justify-between"><span>Workflow Automation</span> <span class="text-gold">$750</span></li>
+                    <li class="flex justify-between"><span>Consulting</span> <span class="text-gold">$350/hr</span></li>
                 </ul>
             </div>
-            <div class="border-gold p-8 bg-obsidian-glass text-center flex flex-col justify-center">
-                <p class="text-[10px] text-white uppercase font-bold mb-4 tracking-widest">Connection</p>
-                <a href="mailto:stayglitched@glitchedrecords.com" class="text-gold border border-gold py-4 text-[9px] uppercase tracking-widest hover:bg-gold hover:text-black">Initialize</a>
+
             </div>
-        </div>
     </section>
 
-    <footer class="max-w-7xl mx-auto text-center border-t border-gold/10 pt-32 pb-20">
-        <p class="text-[10px] uppercase tracking-[0.8em] text-white/20 mb-8">Luxury is a symptom of sovereignty</p>
-        <p class="text-[9px] uppercase tracking-[0.2em] text-gold/60">Indigo Holliday // Sovereign Symptoms // Oceanside, CA</p>
-        <p class="text-[9px] uppercase tracking-[0.4em] text-white/30 mt-4">Lavish Systems // Luxury Solutions // 2026</p>
+    <footer class="max-w-7xl mx-auto text-center pt-40 pb-20 border-t border-gold/10">
+        <p class="font-godhood text-gold text-[14px] uppercase tracking-[1em] mb-10">LAVISH SYSTEMS // LUXURY SOLUTIONS</p>
+        <p class="text-[9px] uppercase tracking-[0.4em] text-white/30">Indigo Holliday // Sovereign Symptoms // Oceanside, CA</p>
     </footer>
 
 </body>
